--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@ h1 {
 <div class="main">
 <div>
   
-<p><img src="dp_1.PNG" alt="Pineapple" width=100 height=100 style="float: right;margin-left:15px;">
-<h2>TEST PROFILE</h2>
-<p>Data Analyst at Test Technologies, Chennai. <br> testprotfolio_93@gmail.com <br> Mob: 765890345</p>
+<p><img src="DP.png" alt="Pineapple" width=100 height=100 style="float: right;margin-left:15px;">
+<h2>SUMAN ASHOK </h2>
+<p>Data Analyst at Test Technologies, BANGALORE <br> sumanprasad778@gmail.com <br> Mob: 7019139312</p>
     </p>
   </div>
 <hr>
@@ -120,40 +120,40 @@ h1 {
   <div class="container carousel-inner no-padding">
     <div class="carousel-item active" style="text-align: center">
       <div class="col-xs-3 col-sm-3 col-md-3">
-        <img src="similarproduct.jpg" alt="Cart" height="100" width="100" align="middle">
+        <img src="cartcart.png" alt="Cart" height="200" width="220" align="middle">
       <h3 align="center"><a href="SimilarProductsSearchEngine.html">Similar Products Search Engine</a></h3>
         <p align="justify">NLP Use Case solved with BOW Vector, Tf-Idf and Cosine Similarity. ML Based Search engine that fetches Similar products from the 180K product inventory data scraped from Amazon.</p>
       </div>    
       
       <div class="col-xs-3 col-sm-3 col-md-3">
-        <img src="click.PNG" alt="Click" height="100" width="100" align="middle">
+        <img src="click.PNG" alt="Click" height="200" width="230" align="middle">
       <h3 align="center"><a href="ClickPredictor.html">Digital Ad Click Predictor</a></h3>
       <p align="justify">A Click Predictor Model built on 4 different Classification algorithms and the accuracies compared. The click predictor is an important ML Feature for Digital Ad Exchanges to spend the budget wisely.</p>
       </div>   
       <div class="col-xs-3 col-sm-3 col-md-3">
-        <img src="kypho.jpg" alt="Cart" height="100" width="100" align="middle">
+        <img src="cluster-fotor-bg-remover-20240111211249.png" alt="Cart" height="200" width="220" align="middle">
       <h3 align="center"><a href="Market_Segmentation_Customer_Data.html">Market Clustering & Segment Prediction</a></h3>
       <p align="justify">Use ML to cluster the customer base and build a classification model to predict the segments of the new customers.</p>
       </div> 
     </div>
     <div class="carousel-item" style="text-align: center">
       <div class="col-xs-3 col-sm-3 col-md-3">
-        <img src="fleet.PNG" alt="Fleet" height="100" width="100" align="middle">
+        <img src="download.png" alt="Fleet" height="200" width="210" align="middle">
       <h3 align="center"><a href="FleetManagement.html">Clustering Of Drivers Data</a></h3>
         <p align="justify">A K Means Clustering Model developed to cluster the Drivers' data into segments based on input features. Elbow Method implemented to decided optimum segments number.</p>
       </div>    
       <div class="col-xs-3 col-sm-3 col-md-3">
-        <img src="titanic.png" alt="titanic" height="100" width="100" align="middle">
+        <img src="shipship.png" alt="titanic" height="200" width="220" align="middle">
       <h3 align="center"><a href="Titanic_survivor.html">Titanic Survivor Predictor</a></h3>
       <p align="justify">A Predictor Model developed to point the prediction probability of a traveller on the Titanic Ship. Data Cleaning of Null Values implemented using an identified Pattern.</p>
       </div>   
       <div class="col-xs-3 col-sm-3 col-md-3">
-        <img src="spam.PNG" alt="spam" height="100" width="100" align="middle">
+        <img src="spam.PNG" alt="spam" height="200" width="230" align="middle">
       <h3 align="center"><a href="Spam_Detector.html">Spam SMS Detector</a></h3>
       <p align="justify">A Natural Language Processing Use Case where Naive Bayes CLassifier Model is used to classify the Spam SMS from teh Real ones. Tf-Idf Word Embedding is implemented.</p>
       </div>   
       <div class="col-xs-3 col-sm-3 col-md-3">
-        <img src="house.PNG" alt="house" height="100" width="100" align="middle">
+        <img src="househouse.png" alt="house" height="200" width="230" align="middle">
       <h3 align="center"><a href="LinearRegression.html">House Price Estimator</a></h3>
       <p align="justify">A Supervised Regression Model that calculates the price of Housing units based on Real Estate Data including many input features and the price of the sample housing units.</p>
       </div> 
@@ -171,7 +171,7 @@ h1 {
 </div>
 <div class="content">
   <h3>Data Science Skill Set</h3>
-  <p><b>Programming languages : </b>Python, R <br> <b>Libraries : </b>Python - Sklearn, seaborn, numpy, pandas. R - ggplot2, caTools </p>
+  <p><b>Programming languages : </b>Python, <br> <b>Libraries : </b>Python - Sklearn, seaborn, numpy, pandas.  </p>
   <p><b>Algorithms & Statistics : </b>K Means Clustering, KNN, Decision Trees, Random Forests, Linear Regression, Logistic Regression, Naive Bayes, Cosine similarity, Pairwise Distances, CountVector(BOW), Tf-Idf  </p>
   <p><b>Data Science Solutions developed for :</b> Clustering, Classification, Forecastig, Text Classification, Text Similarity Score, Image Similarity, Chat Bot, Voice To Text Bot Assistant, OCR, Social Media Analytics kind of problem statements </p>
   </div>
