--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ h1 {
 <hr>
 <div>
 <h3>DATA SCIENCE PROJECTS PORTFOLIO</h3>
-<p>A Display of the Machine Learning Models developed as part of my Data Scientist Journey.<br>Click on the Title of the project to view teh complete code, analysis, model and findings.</p>
+<p>A Display of the Machine Learning Models developed as part of my Data Scientist Journey.<br>Click on the Title of the project to view the complete code, analysis, model and findings.</p>
   </div>
 <!-- Portfolio Gallery Grid -->
 <div id="demo" class="carousel slide" data-ride="carousel">
@@ -148,7 +148,7 @@ h1 {
       <p align="justify">A Predictor Model developed to point the prediction probability of a traveller on the Titanic Ship. Data Cleaning of Null Values implemented using an identified Pattern.</p>
       </div>   
       <div class="col-xs-3 col-sm-3 col-md-3">
-        <img src="spam.PNG" alt="spam" height="200" width="230" align="middle">
+        <img src="spam.png" alt="spam" height="200" width="230" align="middle">
       <h3 align="center"><a href="Spam_Detector.html">Spam SMS Detector</a></h3>
       <p align="justify">A Natural Language Processing Use Case where Naive Bayes CLassifier Model is used to classify the Spam SMS from teh Real ones. Tf-Idf Word Embedding is implemented.</p>
       </div>   
@@ -171,11 +171,10 @@ h1 {
 </div>
 <div class="content">
   <h3>Data Science Skill Set</h3>
-  <p><b>Programming languages : </b>Python, <br> <b>Libraries : </b>Python - Sklearn, seaborn, numpy, pandas.  </p>
-  <p><b>Algorithms & Statistics : </b>K Means Clustering, KNN, Decision Trees, Random Forests, Linear Regression, Logistic Regression, Naive Bayes, Cosine similarity, Pairwise Distances, CountVector(BOW), Tf-Idf  </p>
+  <p><b>Programming languages : </b>Python, <br> <b>Libraries : </b>Python - Sklearn, Seaborn ,Matplot, Numpy, Pandas.  </p>
+  <p><b>Algorithms & Statistics : </b>K Means Clustering, KNN, Decision Trees, Random Forests, Linear Regression, Logistic Regression, Naive Bayes, Cosine similarity, Pairwise Distances, CountVector(BOW), Tf-Idf,  </p>
   <p><b>Data Science Solutions developed for :</b> Clustering, Classification, Forecastig, Text Classification, Text Similarity Score, Image Similarity, Chat Bot, Voice To Text Bot Assistant, OCR, Social Media Analytics kind of problem statements </p>
   </div> 
-
 <!-- END MAIN -->
 </div>
 	
