--- a/index.html
+++ b/index.html
@@ -110,10 +110,7 @@ h1 {
 <hr>
 <div>
 <h3>DATA SCIENCE PROJECTS PORTFOLIO</h3>
-<p>A Display of the Machine Learning Models developed as part of my Data Scientist Journey.<br>Click on the Title of the project to view the complete code, analysis, model and findings.
-"Explore a showcase of my Data Scientist journey through a visual display of Machine Learning models. Click on each project's title for in-depth access to code, analysis, models, and insights – unraveling the intricate layers of my data-driven exploration."
-
-"Dive into my Data Scientist portfolio, featuring a collection of Machine Learning models. Unlock the full spectrum of each project by clicking on its title, revealing detailed code, analyses, models, and discoveries, providing an immersive journey through my data science exploration."</p>
+<p><b>"Explore my Data Scientist journey through a showcase of developed Machine Learning models—click project titles for comprehensive access to code, analysis, models, and findings."."</p>
   </div>
 <!-- Portfolio Gallery Grid -->
 <div id="demo" class="carousel slide" data-ride="carousel">
