--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ h1 {
 <hr>
 <div>
 <h3>DATA SCIENCE PROJECTS PORTFOLIO</h3>
-<p><b>"Explore my Data Scientist journey through a showcase of developed Machine Learning models—click project titles for comprehensive access to code, analysis, models, and findings."."</p>
+<p><b>"Explore my Data Scientist journey through a showcase of developed Machine Learning models—click project titles for comprehensive access to code, analysis, models, and findings."</p>
   </div>
 <!-- Portfolio Gallery Grid -->
 <div id="demo" class="carousel slide" data-ride="carousel">
