--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ h1 {
   <h3>Data Science Skill Set</h3>
   <p><b>Programming languages : </b>Python, <br> <b>Libraries : </b>Python - Sklearn, Seaborn ,Matplot, Numpy, Pandas.  </p>
   <p><b>Algorithms & Statistics : </b>K Means Clustering, KNN, Decision Trees, Random Forests, Linear Regression, Logistic Regression, Naive Bayes, Cosine similarity, Pairwise Distances, CountVector(BOW), Tf-Idf, Smote, PCA  </p>
-  <p><b>Data Science Solutions developed for :</b> Clustering, Classification, Forecastig, Text Classification, Text Similarity Score, Image Similarity, Chat Bot, Voice To Text Bot Assistant, OCR, Social Media Analytics kind of problem statements </p>
+  <p><b>Data Science Solutions developed for :</b> Clustering, Classification, Forecastig, Text Classification, Text Similarity Score, Image Similarity, Chat Bot, Voice To Text Bot Assistant. </p>
   </div> 
 <!-- END MAIN -->
 </div>
