--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ h1 {
   
 <p><img src="DP.png" alt="Pineapple" width=100 height=100 style="float: right;margin-left:15px;">
 <h2>SUMAN ASHOK </h2>
-<p>Data Analyst at Test Technologies, BANGALORE <br> sumanprasad778@gmail.com <br> Mob: 7019139312</p>
+<p>Data Analyst , BANGALORE <br> sumanprasad778@gmail.com <br> Mob: 7019139312</p>
     </p>
   </div>
 <hr>
@@ -171,7 +171,7 @@ h1 {
 </div>
 <div class="content">
   <h3>Data Science Skill Set</h3>
-  <p><b>Programming languages : </b>Python, <br> <b>Libraries : </b>Python - Sklearn, Seaborn ,Matplot, Numpy, Pandas.  </p>
+  <p><b>Programming languages : </b>Python,Sql <br> <b>Libraries : </b>Python - Sklearn, Seaborn ,Matplot, Numpy, Pandas.  </p>
   <p><b>Algorithms & Statistics : </b>K Means Clustering, KNN, Decision Trees, Random Forests, Linear Regression, Logistic Regression, Naive Bayes, Cosine similarity, Pairwise Distances, CountVector(BOW), Tf-Idf, Smote, PCA  </p>
   <p><b>Data Science Solutions developed for :</b> Clustering, Classification, Forecastig, Text Classification, Text Similarity Score, Image Similarity, Chat Bot, Voice To Text Bot Assistant. </p>
   </div> 
